SET(THIRD_PARTY_INCLUDES EIGEN_INCLUDES )
SET(INTERNAL_LIB_INCLUDES "#{CMAKE_SOURCE_DIR}/KalmanFilter" )

SET(INCLUDES 
   THIRD_PARTY_INCLUDES INTERNAL_LIB_INCLUDES COMMON_INCLUDES)

INCLUDE_DIRECTORIES(INCLUDES)
ADD_EXECUTABLE(Chapter3Problem1 Chapter3Problem1-2.cpp)
ADD_EXECUTABLE(Chapter3Problem4 Chapter3Problem4.cpp)
